--- a/article-quantum-computing.html
+++ b/article-quantum-computing.html
@@ -689,7 +689,8 @@
                 <div
                     class="footer-container text-center py-6 max-w-content xl:max-2xl:max-w-50rem max-xl:mx-auto xl:ml-auto">
                     <p>
-                        &copy; 2025 <a href="domain.com" class="transition-colors hover:text-blue-600">domain.com</a> ||
+                        &copy; 2025 <a href="https://sdepabitra.me"
+                            class="transition-colors hover:text-blue-600">Pabitra Banerjee</a>
                         All rights reserved.
                     </p>
                 </div>
