--- a/all-blogs.html
+++ b/all-blogs.html
@@ -770,8 +770,9 @@
                 <div
                     class="footer-container text-center py-6 max-w-content xl:max-2xl:max-w-50rem max-xl:mx-auto xl:ml-auto">
                     <p>
-                        Copyright by
-                        <a href="#" class="transition-colors">@domain.com</a>
+                        &copy; 2025 <a href="https://sdepabitra.me"
+                            class="transition-colors hover:text-blue-600">Pabitra Banerjee</a>
+                        All rights reserved.
                     </p>
                 </div>
             </footer>
