--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div
                 class="fixed top-0 left-0 right-0 z-50 flex items-center justify-between p-2 px-3 bg-white/10 mobile-menu-bar sm:px-6 backdrop-blur-md xl:hidden">
                 <div class="text-lg font-medium name">
-                    <a href="index.html" class="flex items-center gap-2 text-black dark:text-white">
+                    <a href="index" class="flex items-center gap-2 text-black dark:text-white">
                         <img src="assets/img/pb-logo.png" alt="Pabitra Banerjee" class="w-15 h-15">
                         <span>Pabitra</span>
                     </a>
@@ -255,16 +255,16 @@
                 </div>
                 <!-- Social Share Icon Start  -->
                 <div class="flex items-center space-x-4 social-icons *:flex">
-                    <a href="#" title="Share with Facebook">
+                    <a href="https://www.facebook.com/Journalist.Pabitra.Banerjee" title="Share with Facebook">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="#" title="Share with Linkedin">
+                    <a href="https://www.linkedin.com/in/pabitra-banerjee" title="Share with Linkedin">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="#" title="Share with X">
+                    <a href="https://twitter.com/FossilianBhed" title="Share with X">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#" title="Share with X">
+                    <a href="https://www.instagram.com/coderpabitra" title="Share with Instagram">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
@@ -279,7 +279,7 @@
 
                 <div class="p-3 max-xl:mb-3 overflow-hidden minfo__sidebar bg-white dark:bg-nightBlack rounded-2xl">
                     <div class="mx-4 mt-12 text-center user-info lg:mx-6">
-                        <a href="index.html"
+                        <a href="index"
                             class="w-36 h-36 mb-2.5 block mx-auto border-6 border-platinum dark:border-[#2f2f2f] overflow-hidden rounded-full *:w-full *:h-full *:rounded-full">
                             <img src="assets/img/pb-apple.png" class="hidden dark:block " alt="Pabitra Banerjee">
                             <!--Image for Dark Version -->
@@ -361,7 +361,7 @@
                             </div>
                         </div>
                         <div class="mt-6">
-                            <a href="mycv.html" download target="_blank"
+                            <a href="assets/Pabitra-Banerjee-Resume.pdf" download target="_blank"
                                 class="text-center text-sm border border-theme bg-theme flex items-center justify-center gap-2 text-white rounded-4xl py-3.5 transition duration-300 text-[15px] font-semibold hover:bg-themeHover hover:border-themeHover">
                                 DOWNLOAD CV
                                 <span class="animate-bounce">
@@ -399,7 +399,7 @@
                 <!-- Site Logo Start -->
                 <div
                     class="flex border rounded-full logo w-15 h-15 border-platinum dark:border-metalBlack flex-center hover:bg-white dark:hover:bg-metalBlack">
-                    <a href="index.html">
+                    <a href="index">
                         <img src="assets/img/pb-logo.png" alt="Pabitra Banerjee">
                     </a>
                 </div>
@@ -514,16 +514,16 @@
                     <!-- Social Share Icon Start  -->
                     <div
                         class="absolute bottom-0 flex items-center invisible px-5 py-6 space-x-3 transition-all duration-300 -translate-y-1/2 opacity-0 social-icons top-1/2 bg-white dark:bg-nightBlack rounded-4xl right-6 group-hover:opacity-100 group-hover:visible group-hover:right-10 -z-1 *:flex *:transition *:duration-200">
-                        <a href="#" class="hover:text-theme" title="Share with Facebook">
+                        <a href="https://www.facebook.com/Journalist.Pabitra.Banerjee" class="hover:text-theme" title="Share with Facebook">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="#" class="hover:text-theme" title="Share with Linkedin">
+                        <a href="https://www.linkedin.com/in/pabitra-banerjee" class="hover:text-theme" title="Share with Linkedin">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="#" class="hover:text-theme" title="Share with X">
+                        <a href="https://twitter.com/FossilianBhed" class="hover:text-theme" title="Share with X">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="#" class="hover:text-theme" title="Share with X">
+                        <a href="https://www.instagram.com/coderpabitra" class="hover:text-theme" title="Share with Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </div>
@@ -1599,7 +1599,7 @@
 
                             <!-- Bangabhumi News -->
                             <div class="item md:col-span-2 group">
-                                <a href="bangabhumi-news.html"
+                                <a href="bangabhumi-news"
                                     class="block p-3 overflow-hidden border md:p-4 rounded-xl border-platinum dark:border-greyBlack">
                                     <div class="img-wrapper">
                                         <img src="assets/img/portfolio/bangabhuminews.png"
@@ -1630,7 +1630,7 @@
 
                             <!-- Scientific Calculator App -->
                             <div class="item md:col-span-1 group">
-                                <a href="scientific-calculator.html"
+                                <a href="scientific-calculator"
                                     class="block p-3 overflow-hidden border md:p-4 rounded-xl border-platinum dark:border-greyBlack">
                                     <div class="img-wrapper">
                                         <img src="assets/img/portfolio/scientific-calculator.png"
@@ -1661,7 +1661,7 @@
 
                             <!-- Math Mania App -->
                             <div class="item md:col-span-1 group">
-                                <a href="math-mania.html"
+                                <a href="math-mania"
                                     class="block p-3 overflow-hidden border md:p-4 rounded-xl border-platinum dark:border-greyBlack">
                                     <div class="img-wrapper">
                                         <img src="assets/img/portfolio/mathmania.png"
@@ -1693,7 +1693,7 @@
                         </div>
 
                         <div class="mt-10 text-center more-blogs md:mt-13">
-                            <a href="all-projects.html"
+                            <a href="all-projects"
                                 class="inline-flex items-center gap-2 text-[15px] font-medium border border-theme bg-theme text-white py-4.5 px-9 rounded-4xl leading-none transition-all duration-300 hover:bg-themeHover hover:border-themeHover">
                                 More Projects
                             </a>
@@ -1734,7 +1734,7 @@
                             <!-- Article 1 -->
                             <div class="article group">
                                 <div class="thumbnail overflow-hidden flex col-span-12 sm:col-span-6 md:col-span-5">
-                                    <a href="article-ai-future.html" class="block w-full overflow-hidden rounded-xl">
+                                    <a href="article-ai-future" class="block w-full overflow-hidden rounded-xl">
                                         <img src="assets/img/blog/The-Future-of-AI-and-Its-Impact-on-Humanity.webp"
                                             class="object-cover object-center w-full h-full min-h-[288px] max-h-60 md:min-h-60 transition-all duration-300 ease-in-out group-hover:scale-105"
                                             alt="Artificial Intelligence Future">
@@ -1750,13 +1750,13 @@
                                         </div>
                                     </div>
                                     <div class="post-title mt-3 md:mt-4.5 mb-6 md:mb-8">
-                                        <a href="article-ai-future.html"
+                                        <a href="article-ai-future"
                                             class="text-xl font-semibold leading-normal text-black dark:text-white transition-colors line-clamp-2 2xl:text-2xl hover:text-theme">
                                             The Future of AI: How Intelligent Systems are Reshaping Our World
                                         </a>
                                     </div>
                                     <div class="read-details">
-                                        <a href="article-ai-future.html"
+                                        <a href="article-ai-future"
                                             class="inline-flex items-center gap-2 border border-theme text-theme text-sm py-3.5 px-6 rounded-3xl leading-none transition-all hover:bg-themeHover hover:border-themeHover dark:font-medium hover:text-white">
                                             Read More
                                         </a>
@@ -1767,7 +1767,7 @@
                             <!-- Article 2 -->
                             <div class="article group">
                                 <div class="thumbnail overflow-hidden flex col-span-12 sm:col-span-6 md:col-span-5">
-                                    <a href="article-flutter.html" class="block w-full overflow-hidden rounded-xl">
+                                    <a href="article-flutter" class="block w-full overflow-hidden rounded-xl">
                                         <img src="assets/img/blog/flutter-app-dev.jpg"
                                             class="object-cover object-center w-full h-full min-h-[288px] max-h-60 md:min-h-60 transition-all duration-300 ease-in-out group-hover:scale-105"
                                             alt="Flutter Development">
@@ -1782,13 +1782,13 @@
                                         </div>
                                     </div>
                                     <div class="post-title mt-3 md:mt-4.5 mb-6 md:mb-8">
-                                        <a href="article-flutter.html"
+                                        <a href="article-flutter"
                                             class="text-xl font-semibold leading-normal text-black dark:text-white transition-colors line-clamp-2 2xl:text-2xl hover:text-theme">
                                             Building Stunning Apps with Flutter: My Complete Development Workflow
                                         </a>
                                     </div>
                                     <div class="read-details">
-                                        <a href="article-flutter.html"
+                                        <a href="article-flutter"
                                             class="inline-flex items-center gap-2 border border-theme text-theme text-sm py-3.5 px-6 rounded-3xl leading-none transition-all hover:bg-themeHover hover:border-themeHover dark:font-medium hover:text-white">
                                             Read More
                                         </a>
@@ -1799,7 +1799,7 @@
                             <!-- Article 3 -->
                             <div class="article group">
                                 <div class="thumbnail overflow-hidden flex col-span-12 sm:col-span-6 md:col-span-5">
-                                    <a href="article-space.html" class="block w-full overflow-hidden rounded-xl">
+                                    <a href="article-space" class="block w-full overflow-hidden rounded-xl">
                                         <img src="assets/img/blog/Space-Travel.webp"
                                             class="object-cover object-center w-full h-full min-h-[288px] max-h-60 md:min-h-60 transition-all duration-300 ease-in-out group-hover:scale-105"
                                             alt="Space Exploration">
@@ -1814,13 +1814,13 @@
                                         </div>
                                     </div>
                                     <div class="post-title mt-3 md:mt-4.5 mb-6 md:mb-8">
-                                        <a href="article-space.html"
+                                        <a href="article-space"
                                             class="text-xl font-semibold leading-normal text-black dark:text-white transition-colors line-clamp-2 2xl:text-2xl hover:text-theme">
                                             Beyond the Stars: My Thoughts on Recent Universal Space Missions
                                         </a>
                                     </div>
                                     <div class="read-details">
-                                        <a href="article-space.html"
+                                        <a href="article-space"
                                             class="inline-flex items-center gap-2 border border-theme text-theme text-sm py-3.5 px-6 rounded-3xl leading-none transition-all hover:bg-themeHover hover:border-themeHover dark:font-medium hover:text-white">
                                             Read More
                                         </a>
@@ -1831,7 +1831,7 @@
                         </div>
 
                         <div class="mt-10 text-center more-blogs md:mt-13">
-                            <a href="all-blogs.html"
+                            <a href="all-blogs"
                                 class="inline-flex items-center gap-2 text-[15px] font-medium border border-theme bg-theme text-white py-4.5 px-9 rounded-4xl leading-none transition-all duration-300 hover:bg-themeHover hover:border-themeHover">
                                 More Posts
                             </a>
