--- a/index.html
+++ b/index.html
@@ -2060,7 +2060,7 @@
                                         </div>
                                         <div class="flex-1">
                                             <h6 class="text-lg text-black dark:text-white">Location</h6>
-                                            <p class="text-sm">Melbourne Street. No 20</p>
+                                            <p class="text-sm">Manbazar, Purulia, WB</p>
                                         </div>
                                     </li>
                                     <li>
@@ -2086,7 +2086,7 @@
                                         </div>
                                         <div class="flex-1">
                                             <h6 class="text-lg text-black dark:text-white">E-mail</h6>
-                                            <p class="text-sm">smith@gmail.com</p>
+                                            <p class="text-sm">contact@sdepabitra.me</p>
                                         </div>
                                     </li>
                                     <li>
@@ -2109,7 +2109,7 @@
                                         </div>
                                         <div class="flex-1">
                                             <h6 class="text-lg text-black dark:text-white">Phone</h6>
-                                            <p class="text-sm">+976 34 99 99</p>
+                                            <p class="text-sm">+91-9064485906</p>
                                         </div>
                                     </li>
                                 </ul>
